# dataharvester

./: .gitignore  AUTHORS  BuildFile  ChangeLog  Doxyfile  Makefile.am  README  TODO  aclocal.m4  bootstrap  config.h.in  configure.ac  dataharvester.pc.in  dataharvester.spec.in  orcaify
Plugins/: Makefile.am
Plugins/Dbf/interface/: TokenChanger.h
Plugins/Dbf/src/: TokenChanger.cc
Plugins/Dhf/: Makefile.am
Plugins/Dhf/include/: DhfHelpers.h  DhfReader.h  DhfWriter.h  MultiTypeBinaryConverter.h
Plugins/Dhf/src/: DhfHelpers.cc  DhfReader.cc  DhfWriter.cc  MultiTypeBinaryConverter.cc
Plugins/Dhf/test/: Makefile
Plugins/Gzip/: Makefile.am
Plugins/Gzip/include/: GzipReader.h  GzipWriter.h
Plugins/Gzip/src/: GzipReader.cc  GzipWriter.cc
Plugins/HBook/: Makefile.am
Plugins/HBook/include/: HBookReader.h
Plugins/HBook/src/: HBookReader.cc
Plugins/Hdf/: Makefile.am
Plugins/Hdf/include/: HdfHelpers.h  HdfReader.h  HdfWriter.h
Plugins/Hdf/src/: HdfHelpers.cc  HdfReader.cc  HdfWriter.cc
Plugins/Odbc/: Makefile.am
Plugins/Odbc/include/: OdbcWriter.h
Plugins/Odbc/src/: OdbcWriter.cc
Plugins/Root/: Makefile.am
Plugins/Root/include/: RootDataCache.h  RootHelpers.h  RootInternalNtuple.h  RootReader.h  RootWriter.h
Plugins/Root/src/: RootDataCache.cc  RootHelpers.cc  RootInternalNtuple.cc  RootReader.cc  RootWriter.cc
Plugins/Root/test/: 100vtces.root  1event.root  1event.txt  1evt_tracks.root  2events.root  2events.txt  Makefile  cmssw_trks.py  cmssw_vtces.py  plot_vtces.py  release.txt  release_test.sh  test.cc
Plugins/Skeleton/: ConcreteReader.cc  ConcreteReader.h  ConcreteWriter.cc  ConcreteWriter.h  GenericDataCache.cc  GenericDataCache.h  Makefile.am  configure.skel  debian_packages
Plugins/Sqlite/: Makefile.am
Plugins/Sqlite/include/: SqliteReader.h  SqliteWriter.h
Plugins/Sqlite/src/: SqliteReader.cc  SqliteWriter.cc
Plugins/Tcp/: Makefile.am
Plugins/Tcp/include/: TcpCommServer.h  TcpConnector.h  TcpDataServer.h  TcpDataServerThread.h  TcpHelpers.h  TcpWriter.h
Plugins/Tcp/src/: TcpCommServer.cc  TcpConnector.cc  TcpDataServer.cc  TcpDataServerThread.cc  TcpHelpers.cc  TcpWriter.cc
Plugins/Tnt/: Makefile.am
Plugins/Tnt/include/: TntWriter.h
Plugins/Tnt/src/: TntWriter.cc
Plugins/Txt/: Makefile.am
Plugins/Txt/include/: TextReader.h  TextWriter.h
Plugins/Txt/src/: TextReader.cc  TextWriter.cc
Plugins/Xml/: Makefile.am
Plugins/Xml/include/: XmlReader.h  XmlWriter.h
Plugins/Xml/src/: XmlReader.cc  XmlWriter.cc
debian/: changelog  control  copyright  dataharvester-plugin-dhf.install  dataharvester-plugin-hdf.install  dataharvester-plugin-root.install  dataharvester-plugin-sqlite3.install  dataharvester-plugin-tnt.install  dataharvester-plugin-txt.install  dataharvester-plugin-xml.install  dataharvester-plugin-zlib.install  dataharvester.examples  dataharvester.install  libdataharvester-dev.install  python-dataharvester.examples  rules  watch
docs/: Makefile.am  dataharvester-converter.man.inc  dataharvester-systemwriter.man.inc
examples/: Makefile
examples/cpp/: Makefile  read.cc  write.cc
examples/python_reader/: bla.sqlite  read.py
examples/python_writer/: system.py  write.py
include/dataharvester/: AbstractReader.h  AbstractWriter.h  CommentsCollector.h  CommentsExpresser.h  CompositeReader.h  CompositeWriter.h  ConfigurationParser.h  ConfigurationSetter.h  Cout.h  Filter.h  HarvestingConfiguration.h  HarvestingException.h  Helpers.h  Manipulator.h  Mode.h  MultiType.h  NoFilter.h  NoManipulator.h  Reader.h  ReaderBuilder.h  ReaderManager.h  ReaderPrototypeBuilder.h  SimpleConfigurable.h  SimpleConfiguration.h  StreamableReader.h  StreamableWriter.h  StringTools.h  SystemWriter.h  TerminateException.h  Timer.h  Tuple.h  TupleNameFilter.h  TupleRow.h  TupleRowConsistencyChecker.h  UniversalManipulator.h  Writer.h  WriterBuilder.h  WriterManager.h  WriterPrototypeBuilder.h
m4/: check_zlib.m4
performance/: Makefile  read.py  write.py
python/: Makefile.am  __init__.py.in  dataharvester.i
python/scripts/: cmssw_convert.py
python/scripts/cmssw/: CmsManipulator.py  JetTagManipulator.py  TrackManipulator.py  VertexManipulator.py  __init__.py
src/: AbstractReader.cc  AbstractWriter.cc  CommentsCollector.cc  CommentsExpresser.cc  CompositeReader.cc  CompositeWriter.cc  ConfigurationSetter.cc  Cout.cc  HarvestingException.cc  Helpers.cc  Makefile.am  Mode.cc  MultiType.cc  NoFilter.cc  NoManipulator.cc  Reader.cc  ReaderBuilder.cc  ReaderManager.cc  ReaderPrototypeBuilder.cc  SimpleConfiguration.cc  StreamableReader.cc  StreamableWriter.cc  StringTools.cc  SystemWriter.cc  TerminateException.cc  Timer.cc  Tuple.cc  TupleNameFilter.cc  TupleRow.cc  TupleRowConsistencyChecker.cc  UniversalManipulator.cc  Writer.cc  WriterBuilder.cc  WriterManager.cc
tests/: AutokeyTest.cpp  BuildFile  BuildFile.old  DHfile.txt  DHtest.txt  HarvesterCommand.cpp  HarvesterTelnet.cpp  Harvesterd.cpp  HarvestingTest.cpp  Makefile.am  Makefile.old  MultiFileTcpTest.cpp  MultiTest.cpp  MultiTypeTest.cpp  SimpleExample.cpp  SystemHarvesterTest.cpp  TupleTest.cpp  arrays.good.txt  arrays.int.txt  arrays.txt  arrays_via_daemon.txt  arraysvia_daemon.txt  bla.txt  comments.released.txt  comments_test.py  dh_tree  f2.root  f2.txt  h2.txt  ha.txt  harvestingd.cpp  hierarchy.txt  manip.released.txt  manip_test.py  my.txt  r.root  r.txt  readtest.py  release_test0.sh  release_test1.sh  (+12 more)
tests/unused/: release_test2.sh  release_test3.sh  release_test5.sh  release_test6.sh
utils/: Makefile.am  converter.cc  dataharvester_converter.py  dataharvester_merge.py  dataharvester_mkhierarchic.py  dataharvester_systemwriter.py  python_wrapper.in
