EXTRA_DIST = dataharvester-converter.man.inc dataharvester-systemwriter.man.inc

#dist_man_MANS = dataharvester-converter.1 dataharvester-systemwriter.1

# MAINTAINERCLEANFILES = dataharvester-converter.1

#dataharvester-converter.1: $(top_srcdir)/utils/converter.cc $(srcdir)/dataharvester-converter.man.inc $(top_srcdir)/configure.ac
#	$(HELP2MAN) -n "tool to convert hierarchic tuples between different data formats" --section=1 --include=$(srcdir)/dataharvester-converter.man.inc $(top_builddir)/utils/dataharvester-converter$(EXEEXT) -N --output=$@ 

#dataharvester-systemwriter.1: $(top_srcdir)/utils/systemwriter.cc $(srcdir)/dataharvester-systemwriter.man.inc $(top_srcdir)/configure.ac
#	$(HELP2MAN) -n "simple tool to call the dataharvester's systemwriter from the commandline" --section=1 --include=$(srcdir)/dataharvester-systemwriter.man.inc $(top_builddir)/utils/dataharvester-systemwriter$(EXEEXT) -N --output=$@ 
